# pyspotify

./: .gitignore  .hgignore  .mailmap  .travis.yml  AUTHORS  CHANGELOG.txt  MANIFEST.in  Makefile  README  README.rst  autotest.sh  client.py  dev-requirements.txt  env.sh  example1.py  fabfile.py  jukebox.py  pyproject.toml  pyspotify.wpr  setup.cfg  setup.py  tasks.py  tox.ini
.circleci/: config.yml
debian/: .gitignore  README.Debian  changelog  control  copyright  gbp.conf  python-spotify-doc.doc-base  python-spotify-doc.links  python-spotify.pydist  python-spotify.substvars  rules  watch
doc/: INSTALL  Makefile  installation.rst
docs/: api.rst  audiosink.rst  authors.rst  changelog.rst  changes.rst  conf.py  contributing.rst  development.rst  index.rst  installation.rst  introduction.rst  licenses.rst  plans.rst  quickstart.rst  requirements.txt  sp-constants.csv  tutorial.rst
examples/: browse.py  capitest.py  cover.py  example1.py  failing_link_to_playlist.py  jukebox.py  jukebox.py~  play_track.py  shell.py
lib/: libspotify.la.in  libspotify.so.2.0.53061  libspotify.so.3  libspotify.so.3.0.62711
libmockspotify/: album.c  albumbrowse.c  artist.c  artistbrowse.c  error.c  event.c  image.c  inbox.c  libmockspotify.c  libmockspotify.h  link.c  player.c  playlist.c  playlistcontainer.c  search.c  session.c  toplistbrowse.c  track.c  urlcode.c  urlcode.h  user.c  util.c  util.h
libspotify-0.0.4/: Makefile
pyspotify/: MANIFEST.in  README.rst  setup.py  spotify.py
spotify/: __init__.py  _spotify_build.py  album.py  alsa.py  alsahelper.py  api.h  api.processed.h  artist.py  audio.py  capi.py  client.py  compat.py  config.py  connection.py  constant.py  error.py  eventloop.py  gstreamer.py  image.py  inbox.py  link.py  loadable.py  manager.py  offline.py  osshelper.py  player.py  playlist.py  playlist_container.py  playlist_track.py  playlist_unseen_tracks.py  portaudiohelper.py  search.py  session.py  settings.py  sink.py  social.py  toplist.py  track.py  user.py  utils.py  (+1 more)
src/: album.c  album.h  albumbrowser.c  albumbrowser.h  artist.c  artist.h  artistbrowser.c  artistbrowser.h  image.c  image.h  link.c  link.h  track.c  (+22 more)
(+263 files in other folders)
